force-app/main/default/objects/Account/fields/deliveryLocation__c.field-meta.xml
<CustomField>
    <fullName>deliveryLocation__c</fullName>
    <description>Captures the customer&apos;s precise delivery coordinates using geo-location in degrees, minutes, and seconds.</description>
    <label>Delivery Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>