force-app/main/default/objects/Account/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <description>Stores rich-text formatted notes and supplementary details about the customer.</description>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>