force-app/main/default/objects/Account/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Records the customer’s official email address for communication.</description>
    <externalId>true</externalId>
    <label>Business Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>