force-app/main/default/objects/Account/fields/maxOpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>maxOpportunityAmount__c</fullName>
    <description>This will show the highest opportunities amount on this Customer.</description>
    <label>Max Opportunity Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>