force-app/main/default/objects/Account/fields/MaxTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>MaxTransactionAmount__c</fullName>
    <description>This will show the highest transaction amount on this Customer.</description>
    <label>Max Transaction Amount</label>
    <summarizedField>Transactions__c.amount__c</summarizedField>
    <summaryForeignKey>Transactions__c.accountId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>