force-app/main/default/objects/Account/fields/serviceStatus__c.field-meta.xml
<CustomField>
    <fullName>serviceStatus__c</fullName>
    <description>Reflects the current service engagement level: Retail (default), Prospect, or Expired.</description>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail (default)</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>