force-app/main/default/objects/Account/fields/totalContacts__c.field-meta.xml
<CustomField>
    <fullName>totalContacts__c</fullName>
    <description>Shows the total number of related contacts for the customer.</description>
    <label>Total Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>