force-app/main/default/objects/Account/fields/totalOpportunities__c.field-meta.xml
<CustomField>
    <fullName>totalOpportunities__c</fullName>
    <description>This will show the total opportunities available per this Account</description>
    <label>Total Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>