force-app/main/default/objects/Account/fields/totalPremiumOpportunities__c.field-meta.xml
<CustomField>
    <fullName>totalPremiumOpportunities__c</fullName>
    <description>This will show the total premium opportunities available per this Account</description>
    <label>Total Premium Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Amount</field>
        <operation>greaterOrEqual</operation>
        <value>500000</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>