force-app/main/default/objects/Account/fields/totalTransactions__c.field-meta.xml
<CustomField>
    <fullName>totalTransactions__c</fullName>
    <description>This will show the total transactions available per this Account</description>
    <label>Total Transactions</label>
    <summaryForeignKey>Transactions__c.accountId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>