force-app/main/default/objects/Account/fields/uniqueId__c.field-meta.xml
<CustomField>
    <fullName>uniqueId__c</fullName>
    <description>Stores a unique identifier for the customer used uniquely by external system.</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>